--- a/front-end/angular.json
+++ b/front-end/angular.json
@@ -30,8 +30,7 @@
               "src/styles.css"
             ],
             "scripts": [
-              "node_modules/jquery/dist/jquery.min.js",
-              "src/assets/js/generatePdf.js"
+              "node_modules/jquery/dist/jquery.min.js"
             ]
           },
           "configurations": {
